- system_monitor: Correct perf-per-Watt calculation for LIB results
- phodevi: Support Nouveau's pstate formatting changes to read core/mem MHz on newer kernels
- phodevi: Support for reading monitor EDID over sysfs, decoding descriptors, and obtaining monitor name (should improve monitor name reporting for Intel Linux systems)
- pts_LineGraph: Alignment fix for keys

Phoronix Test Suite 5.2.1-Khanino
11 July 2014

- pts-core: Add VDPAU as a dependency to the xorg-video external dependency on more platforms
- pts-core: Don't check OpenBenchmarking.org credentials when the network is down
- pts-core: Rework result-file-to-text sub-command, show text-based graph results
- phodevi: Improve NVIDIA binary driver GPU utilization detection
- phodevi: Add DDE / Deepin Desktop Environment detection
- pts_Graph: Few minor graph alignment corrections

Phoronix Test Suite 5.2.0-Khanino
5 June 2014

- pts-core: Support for GZ compressing result file XML data before uploading to OpenBenchmarking.org
- pts_Graph: Further graphing improvements

Phoronix Test Suite 5.2 Milestone 4
29 May 2014

- pts-core: Always report the CPU scaling governor to the system table
- pts-core: Add auto-sort-result-file option
- phoromatic: Improve the systems' page
- phoromatic: Allow up to three connection failures before quitting
- pts_Graph: Improved, cleaner, and more accurate rendering of the pts_OverViewGraph
- pts_Graph: Make the horizontal box chart graph in good shape
- pts_Graph: Revert earlier render_graph_value_ticks() change by mufasa72 as it produced inaccurate tick values
- pts_Graph: use the horizontal box plot when rendering frame times for large number of results
- pts_Graph: Various other graphing improvements

Phoronix Test Suite 5.2 Milestone 3
22 May 2014

- pts-core: Be more strict in handling DynamicRunCount option
- phoromatic: Cleaning up more of the Phoromatic UI
- phoromatic: Support for updating the system status