@@ -3,8 +3,8 @@
 /*
 	Phoronix Test Suite
 	URLs: http://www.phoronix.com, http://www.phoronix-test-suite.com/
-	Copyright (C) 2008 - 2012, Phoronix Media
-	Copyright (C) 2008 - 2012, Michael Larabel
+	Copyright (C) 2008 - 2014, Phoronix Media
+	Copyright (C) 2008 - 2014, Michael Larabel
 	phodevi_motherboard.php: The PTS Device Interface object for the motherboard
 
 	This program is free software; you can redistribute it and/or modify
@@ -418,6 +418,11 @@ class phodevi_motherboard extends phodevi_device_interface
 			if(empty($info))
 			{
 				$info = phodevi_linux_parser::read_sys_dmi('product_name');
+			}
+
+			if(empty($info) && is_file('/sys/bus/soc/devices/soc0/machine'))
+			{
+				$info = pts_file_io::file_get_contents('/sys/bus/soc/devices/soc0/machine');
 			}
 		}
 		else if(phodevi::is_windows())
